quark/test/quark/AST/Errors/functionAlreadyDeclared-001.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

fn foo: -> void {}
fn foo: -> void {}

// CHECK:Error: function 'foo' already defined!
